MFH: Fixed bug #45799 (imagepng() crashes on empty image)